[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-trademarks"
version = "0.1.4"
description = "MCP server: Russian trademark clearance — search the Rospatent/FIPS registries by wordmark, assess similarity (advisory), check application/certificate status, and extend internationally via TMview, filtered by Nice (МКТУ) classes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "trademark",
  "rospatent",
  "fips",
  "tmview",
  "intellectual-property",
  "nice-classification",
  "russia",
  "atomno",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=3.0.0,<4.0.0",
  "mcp>=1.0.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-trademarks"
Repository = "https://github.com/atomno-mcp/mcp-trademarks"
Issues = "https://github.com/atomno-mcp/mcp-trademarks/issues"
Changelog = "https://github.com/atomno-mcp/mcp-trademarks/blob/main/CHANGELOG.md"
Documentation = "https://atomno-mcp.ru/mcp/trademarks"

[project.scripts]
atomno-mcp-trademarks = "mcp_trademarks.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_trademarks"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
